@@ -5,9 +5,10 @@ It was downloaded from: http://launchpad.net/powernap
 
 Upstream Authors:
  Dustin Kirkland <kirkland@canonical.com>
+ Andres Rodriguez <andreserl@canonical.com>
 
 Copyright:
- Copyright (C) 2009 Canonical Ltd.
+ Copyright (C) 2009-2011 Canonical Ltd.
 
  All rights reserved.
 
